# python-wlsqm

./: .gitignore  AUTHORS.md  CHANGELOG.md  CLAUDE.md  LICENSE.md  README  README.md  TODO  TODO.md  TODO_DEFERRED.md  meson.build  pyproject.toml  setup.py
.github/workflows/: ci.yml
briefs/: source-audit-report.md  wlsqm-modernization-brief.md
doc/: eulerflow.lyx  wlsqm.lyx  wlsqm_gen.lyx
doc/extra/: derivative_conversion.lyx  wlsqm_bchandling.lyx
examples/: expertsolver_example.py  lapackdrivers_example.py  sudoku_lhs.py  wlsqm_example.py
tests/: TODO  _smoke_seeds.py  conftest.py  lapackdrivers.py  test_cimport.py  test_edge_cases.py  test_expert.py  test_interp.py  test_lapackdrivers.py  test_noise_robustness.py  test_package.py  test_parallel.py  test_simple.py  test_stencil.py  wlsqm2.py  wlsqm_example.py
wlsqm/: __init__.py  meson.build
wlsqm/fitter/: defs.pxd  defs.pyx  expert.pyx  impl.pxd  impl.pyx  infra.pxd  infra.pyx  interp.pxd  interp.pyx  meson.build  polyeval.pxd  polyeval.pyx  popcount.h  simple.pxd  simple.pyx
wlsqm/utils/: lapackdrivers.pxd  lapackdrivers.pyx  meson.build  ptrwrap.pxd  ptrwrap.pyx
wlsqm/wlsqm2/: fitter.pxd  fitter.pyx  wlsqm2_defs.pxd  wlsqm2_defs.pyx  wlsqm2_eval.pxd  wlsqm2_eval.pyx  wlsqm2_expert.pyx  wlsqm2_impl.pxd  wlsqm2_impl.pyx  wlsqm2_infra.pxd  wlsqm2_infra.pyx  wlsqm2_poly.pxd  wlsqm2_poly.pyx
