[build-system]
requires = ["meson-python>=0.17", "Cython>=3.0", "numpy>=1.25", "scipy>=1.9"]
build-backend = "mesonpy"

[project]
name = "wlsqm"
dynamic = ["version"]
description = "Fast and accurate weighted least squares meshless interpolator for Python"
readme = "README.md"
license = "BSD-2-Clause"
requires-python = ">=3.11"
authors = [
    {name = "Juha Jeronen", email = "juha.jeronen@jamk.fi"},
]
keywords = [
    "numerical", "interpolation", "differentiation",
    "curve-fitting", "least-squares", "meshless",
    "numpy", "cython",
]
dependencies = [
    "numpy>=1.25",
    "scipy>=1.9",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]

[project.urls]
Homepage = "https://github.com/Technologicat/python-wlsqm"
Repository = "https://github.com/Technologicat/python-wlsqm"
Issues = "https://github.com/Technologicat/python-wlsqm/issues"
Changelog = "https://github.com/Technologicat/python-wlsqm/blob/master/CHANGELOG.md"

[tool.ruff]
line-length = 130
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "00_stuff",
]

[tool.ruff.lint]
select = ["E", "W", "F", "SIM"]
ignore = [
    # pycodestyle
    "E203",   # whitespace before ':' — needed for slice alignment
    "E265",   # block comment should start with '# ' — commented-out code, markers
    "E301",   # expected 1 blank line — blank lines are semantic paragraph breaks
    "E302",   # expected 2 blank lines before def — same
    "E305",   # expected 2 blank lines after end — same
    "E306",   # expected blank line before nested def — same
    "E402",   # module level import not at top — conditional/deferred imports
    "E501",   # line too long — advisory, not enforced
    "E701",   # multiple statements on one line (colon) — fine in numerical code
    "E702",   # multiple statements on one line (semicolon) — same; visual pairing of related updates
    "E731",   # lambda assignment — closures are idiomatic in this codebase
    "E741",   # ambiguous variable name — `I`, `l`, `O` are standard in numerical code (identity matrix, index vector, ...)
    # flake8-simplify
    "SIM102",  # collapsible if — nested ifs often represent distinct semantic guards
    # Note: SIM103 (return condition directly) is intentionally NOT ignored here.
    # It is enabled as an advisory — CI runs it in a non-failing second pass.
    "SIM105",  # contextlib.suppress — try/except/pass is more flexible and explicit
    "SIM108",  # ternary instead of if/else — often less readable, no real gain
    "SIM114",  # combine if branches — match-casing style; autofix would damage semantics
    "SIM117",  # combine with statements — nesting shows parent/child relationships
    "SIM118",  # in-dict-keys — explicit .keys() marks the variable as a dictlike
    "SIM300",  # yoda conditions — natural reading order preferred
    "SIM910",  # dict.get with None default — explicit None documents programmer intent
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # re-exports via star-import

[tool.cython-lint]
max-line-length = 200
ignore = [
    "E114",  # indentation is not a multiple of 4 (comment) — comment columns chosen for alignment with code, not tab stops
    "E115",
    "E116",  # unexpected indentation (comment) — same reason
    "E117",  # over-indented comment — same reason as E114
    "E127",  # continuation line over-indented for visual indent — visual alignment of multi-line signatures is the project style
    "E201",
    "E202",
    "E221",
    "E222",  # multiple spaces after operator — column-aligned assignments (e.g. `cdef int x   = 1 / cdef int foo = 2`) are the project style
    "E231",
    "E261",  # at least two spaces before inline comment — single-space inline comments are common in numerical code
    "E262",  # inline comment should start with '# ' — `#   more text` is used for column-aligned dimensional-scope annotations in infra.pxd
    "E265",  # block comment should start with '# ' — commented-out code and section markers
    "E301",  # expected 1 blank line — semantic spacing
    "E302",  # expected 2 blank lines before def — 1 blank line is the project style
    "E303",  # too many blank lines — three-blank-line paragraph separators at major section breaks
    "E305",  # expected 2 blank lines after class/function definition — mirror of E302, same reason
    "E501",  # line too long — advisory, not enforced (max-line-length = 200 is already generous for long cdef signatures)
    "E741",  # ambiguous variable name — `I`, `l`, `O` are standard in numerical code (identity matrix, index vector, ...)
    "W293",
    "W391",
]

[tool.cibuildwheel]
build = "cp311-* cp312-* cp313-* cp314-*"
skip = "*-win32 *-manylinux_i686 *-musllinux*"
test-requires = ["pytest", "numpy", "scipy"]
test-command = "pytest {project}/tests -v"

# macOS wheels ship without OpenMP. We could `brew install libomp` in a
# `[tool.cibuildwheel.macos] before-all` step and let delocate-wheel bundle
# libomp.dylib into the wheel, but Homebrew's current libomp (22.x) has a
# minimum macOS target (15.0) newer than cibuildwheel's default arm64 target
# (11.0). delocate-wheel correctly refuses to bundle it because the resulting
# wheel would lie about its compatibility.
#
# We could either (a) bump MACOSX_DEPLOYMENT_TARGET to 15.0, shrinking the
# supported macOS range by ~4 years, or (b) build libomp from source with a
# lower target (complex CI). Instead, we lean on meson's
# `dependency('openmp', required: false)` fallback: without libomp on the
# build host, meson builds the extension in serial mode. Cython's `prange`
# degrades to plain `range`, tests still pass, and macOS wheels are slower
# but portable all the way back to macOS 11. Users who want parallel fits
# on macOS can install from source: `brew install libomp` and then
# `pip install --no-binary wlsqm wlsqm`. README.md documents this.

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pip",
    "cython-lint",
    "Cython>=3.0",
    "ruff>=0.14.0",
    "flake8",
    "autopep8",
    "importmagic",
    "epc",
    "jedi>=0.19.2",
    "scipy>=1.9",
    "matplotlib",
    # Needed in the venv (not just the isolated build env) so meson-python's
    # editable loader can rebuild the extension on import after .pyx/.pxd edits.
    "meson-python>=0.17",
    "meson",
    "ninja",
    # For local pre-release sanity checks: `python -m build --sdist`
    # exercises the same sdist path that CI runs on tag push.
    "build",
    # For validating .github/workflows/*.yml during local dev (not used at runtime).
    "pyyaml>=6.0.3",
]
